[tool.poetry]
name = "tdd-leet"
version = "0.1.0"
description = "Solving leetcode puzzles"
authors = ["Adnene_wsl <adnen.guessoum@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "leet"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
